# gowiki

./: README.md  pyproject.toml
src/: app.py  go.mod  go.sum  wiki.go
